--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
   background-size: cover;
 }
 
-button {
+.contact {
   padding: 1em 2em;
   border-radius: 5em;
   border: none;
@@ -54,7 +54,15 @@ button {
   background-color: var(--clr-neutral-white);
 }
 
-button:hover {
+.contact > a{
+  color: black;
+}
+
+.contact:hover > a{
+  color: var(--clr-neutral-white);
+}
+
+.contact:hover {
   background-color: var(--clr-primary-footer);
   color: var(--clr-neutral-white);
 }
