--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 }
 
 * {
-  /* outline: solid 1px red; */
+  outline: solid 1px red;
   padding: 0;
   margin: 0;
 }
@@ -486,7 +486,7 @@ a.footer-nav-link:hover {
     display: flex;
     flex-direction: column;
     gap: 2em;
-    max-height: 27vh;
+    max-height: 50vh;
     padding-top: 10em;
   }
 
